# kalosphere-backend

./: .gitignore
auth_service/: .dockerignore  API_DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_api.py
auth_service/auth_service/: settings.py  urls.py
auth_service/users/: admin.py  models.py  urls.py  (+2 more)
content_service/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
profile_service/: .dockerignore  .env.example  Dockerfile  README.md  TESTING.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
profile_service/app/: __init__.py  main.py
profile_service/app/api/: deps.py
profile_service/app/api/v1/: profiles.py  router.py
profile_service/app/core/: config.py  exceptions.py  security.py
profile_service/app/db/: __init__.py  session.py
profile_service/app/db/migrations/: env.py
profile_service/app/db/migrations/versions/: 001_initial_profile_tables.py
profile_service/app/events/: __init__.py  consumer.py  handlers.py
profile_service/app/models/: base.py  preferences.py  profile.py  reputation.py
profile_service/app/schemas/: __init__.py  events.py  preferences.py  profile.py  reputation.py
profile_service/app/services/: avatar_service.py  preferences_service.py  profile_service.py  reputation_service.py
profile_service/scripts/: generate_test_token.py  simulate_events.py
profile_service/tests/: conftest.py  test_events.py  test_profiles.py
(+34 files in other folders)
